@@ -1,4 +1,7 @@
 current:
+  * Qt widget cleanup
+    - handle video device set before window attached
+    - prevent exceptions from escaping event handlers
   * more Qt window creation hook fixes
     - NB may still cause problems if video is opened before window is visible
   * finish fix for Qt init ordering (bug #2844846)
